# rust-bicycle-book-wordcount

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: lib.rs  main.rs
