[package]
name = "bicycle-book-wordcount"
version = "0.1.0"
authors = ["Shingo Yamazaki <shingoyamazaki00@gmail.com>"]
edition = "2018"

# ここから追記
license = "MIT OR Apache-2.0"
description = "シンプルな文字、単語、行の出現頻度の計数機能を提供します。"
readme = "README.md"
repository = "https:/github.com/zaki-yama-labs/rust-bicycle-book-wordcount"
categories = ["command-line-utilities"]
keywords = ["example", "frequency", "text"]
exclude = ["text.txt", "tests/*", ".github/*"]

[badges]
github-actions = { repository = "zaki-yama-labs/rust-bicycle-book-wordcount" }
# 追記ここまで

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0"
